PaC/CEL/kyverno-Yaml,CEL/1.yaml-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: native-no-hostnetwork
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: host-network
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "HostNetwork is not allowed in the Pod."
        pattern:
          spec:
            hostNetwork: "false"
